--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "chrome-aws-lambda": "^6",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "postcss": "8.4.21",
-    "puppeteer": "^19.9.0",
+    "puppeteer-core": "^6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "prisma": "^4.12.0"
+    "prisma": "^4.12.0",
+    "puppeteer": "^19.9.0"
   }
 }
