--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
-    "chrome-aws-lambda": "^6",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
